--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
+    "react-signature-canvas": "^1.1.0-alpha.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.3.3"
   },
   "devDependencies": {
