--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/x-charts": "^6.19.4",
     "@mui/x-data-grid": "^6.19.4",
     "axios": "^1.6.7",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
