--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.10",
     "@mui/x-charts": "^6.19.4",
     "@mui/x-data-grid": "^6.19.4",
+    "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.6.7",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
@@ -26,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-signature-canvas": "^1.1.0-alpha.1",
+    "tailwindcss": "^4.0.15",
     "xlsx": "^0.18.5",
     "yup": "^1.3.3"
   },
