--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.7",
     "jspdf": "^3.0.0",
     "jspdf-autotable": "^5.0.2",
+    "lightningcss": "^1.29.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
