--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.6.7",
     "dayjs": "^1.11.13",
-    "jspdf": "^3.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lightningcss": "^1.29.3",
     "react": "^18.3.1",
@@ -29,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
     "react-signature-canvas": "^1.1.0-alpha.1",
+    "react-to-print": "^3.1.0",
     "tailwindcss": "^4.0.15",
     "xlsx": "^0.18.5",
     "yup": "^1.3.3"
