--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@mui/x-data-grid": "^6.19.4",
     "@tailwindcss/vite": "^4.0.15",
     "axios": "^1.6.7",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.13",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lightningcss": "^1.29.3",
+    "p-limit": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
