--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lightningcss": "^1.29.3",
+    "lucide-react": "^0.518.0",
     "p-limit": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
