--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "react-hook-form": "^7.50.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
-    "react-signature-canvas": "1.0.7",
+    "react-signature-canvas": "^1.0.7",
     "react-to-print": "^3.1.0",
+    "signature_pad": "^5.0.10",
     "tailwindcss": "^4.0.15",
     "trim-canvas": "0.1.2",
     "xlsx": "^0.18.5",
